# AlphaSudokuGo

./: .gitignore  CMakeLists.txt  GlowingColor.h  Parser.cpp  Parser.h  Particals.cpp  Particals.h  README.md  SudokuCsp.cpp  SudokuCsp.h  Utility.cpp  examples.ipynb  main.cpp  solver.cpp  solver.h  sudoku.cpp  sudoku.h  test.cpp
docs/: index.html  worker.js
docs/css/: parser.css  styles.css
docs/js/: parser.js  sudoku.js  theme.js  tutorial.js
